# universe

./: .gitignore  BUILD  MODULE.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  readme.md
.github/workflows/: go.yaml
cmd/discsearch/: BUILD  discsearch.go  main.go
cmd/ent/: main.go
cmd/internal/: ent.go
cmd/turso/: BUILD  turso.go
data/: .gitignore  BUILD
ent/: BUILD  album.go  album_create.go  album_delete.go  album_query.go  album_update.go  artist.go  artist_create.go  artist_delete.go  artist_query.go  artist_update.go  client.go  ent.go  mutation.go  playlist.go  playlist_create.go  playlist_delete.go  playlist_query.go  playlist_update.go  runtime.go  track.go  track_create.go  track_delete.go  track_query.go  track_update.go  tx.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
ent/album/: BUILD  album.go  where.go  where_custom.go
ent/artist/: BUILD  artist.go  where.go
ent/enttest/: BUILD  enttest.go
ent/hook/: BUILD  hook.go
ent/migrate/: BUILD  schema.go
ent/playlist/: playlist.go  where.go
ent/predicate/: BUILD  predicate.go
ent/runtime/: BUILD  runtime.go
ent/schema/: BUILD  album.go  artist.go  playlist.go  track.go  user.go
ent/track/: BUILD  track.go  where.go  where_custom.go
ent/user/: BUILD  user.go  where.go
lib/brain/: BUILD  album.go  albumIndex.go  album_test.go  artist.go  artist_test.go  brain.go  brain.gorm.go  brain.sqlx.go  brainIndex.go  brain_test.go  (+18 more)
sql/: check_for_dups.sql  discogs_releases.sql  duplicate_albums.sql  duplicate_meta_albums.sql  test.sql  user_seller_intersection.sql
(+77 files in other folders)
