bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_go_cmp", "com_github_jmoiron_sqlx", "com_github_joho_godotenv", "com_github_mattn_go_sqlite3", "com_github_schollz_progressbar_v3", "com_github_tursodatabase_libsql_client_go", "com_github_zmb3_spotify_v2", "org_golang_x_oauth2")
